<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.search.SearchActionFragment">

    <FrameLayout
        android:id="@+id/fl_search"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rec_search_et"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_search_et" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/search_et_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="16sp" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:background="@drawable/rec_search_btn"
        android:backgroundTint="@color/black"
        android:text="@string/search_search_btn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fl_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fl_search"
        app:layout_constraintTop_toTopOf="@+id/fl_search" />

    <HorizontalScrollView
        android:id="@+id/hcv_category"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_search">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_keyword1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_category_btn"
                android:text="@string/search_tv_meme"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_keyword2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_category_btn"
                android:text="@string/search_tv_comedy"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_keyword3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_category_btn"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/search_tv_zzzzz"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_keyword4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_category_btn"
                android:text="@string/search_tv_legend"
                android:textSize="16sp" />
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>