<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.shorts.ShortsFragment">

    <HorizontalScrollView
        android:id="@+id/hcv_category"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_category1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_keyword_btn"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/short_tv_movie"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_category2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_keyword_btn"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/short_tv_game"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_category3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_keyword_btn"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/short_tv_news"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_category4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_keyword_btn"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/short_tv_trip"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_category5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rec_keyword_btn"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/short_tv_cook"
                android:textSize="16sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_shorts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hcv_category"
        app:spanCount="2"
        tools:listitem="@layout/shorts_item" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_error"
        android:textColor="@color/textGray"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hcv_category" />

</androidx.constraintlayout.widget.ConstraintLayout>